syntax = "proto3";

package QueryService;

option java_package = "it.trenical.grpc";
option java_multiple_files = true;

import "Data.proto";

service QueryService {
  rpc QueryTrips (QueryTripsRequest) returns (QueryTripsResponse);
  rpc QueryTrainTypes (QueryTrainTypesRequest) returns (QueryTrainTypesResponse);
  rpc QueryStations (QueryStationsRequest) returns (QueryStationsResponse);
  rpc QueryTickets (QueryTicketsRequest) returns (QueryTicketsResponse);
  rpc QueryUser (QueryUserRequest) returns (QueryUserResponse);
  rpc QueryPromotion (QueryPromotionRequest) returns (QueryPromotionResponse);
  rpc QueryPriceData (QueryPriceDataRequest) returns (QueryPriceDataResponse);
}

message QueryTripsRequest {
  bool all = 1;
  Data.Trip trip = 2;
}

message QueryTripsResponse {
  repeated Data.Trip trips = 1;
}

message QueryTrainTypesRequest {}

message QueryTrainTypesResponse {
  repeated Data.TrainType types = 1;
}

message QueryStationsRequest {}

message QueryStationsResponse {
  repeated Data.Station stations = 1;
}

message QueryTicketsRequest {
  string token = 1;
}

message QueryTicketsResponse {
  repeated Data.Ticket tickets = 1;
  bool wasTokenValid = 2;
}

message QueryUserRequest {
  Data.SessionToken token = 1;
}

message QueryUserResponse {
  Data.User user = 1;
  bool wasTokenValid = 2;
}

message QueryPromotionRequest {
  Data.Promotion promotion = 1;
  Data.SessionToken token = 2;
}

message QueryPromotionResponse {
  optional Data.Promotion promotion = 1;
  bool wasTokenValid = 2;
}

message QueryPriceDataRequest {
}

message QueryPriceDataResponse {
  float distanceMultiplier = 1;
  float businessMultiplier = 2;
}